--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("fcb.png");
+	background-image: url("fcb.jpg");
 	background-repeat: no-repeat;
    	background-size: 99%;
 	}
